--- a/src/content/docs/builders/tools/libraries/kethereum.mdx
+++ b/src/content/docs/builders/tools/libraries/kethereum.mdx
@@ -2,7 +2,7 @@
 title: KEthereum
 description: Intro to KEthereum
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
