--- a/src/content/docs/builders/tools/libraries/nethereum.mdx
+++ b/src/content/docs/builders/tools/libraries/nethereum.mdx
@@ -3,7 +3,7 @@ title: Nethereum
 description: Intro to Nethereum
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Nethereum is a .NET integration library for Ethereum, enabling developers to interact with EVM chains and smart contracts using the C# programming language.
