--- a/src/content/docs/builders/tools/wallets/invisible-signer.mdx
+++ b/src/content/docs/builders/tools/wallets/invisible-signer.mdx
@@ -2,7 +2,7 @@
 title: Invisible Signers
 description: Intro to Invisible Signers
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
