--- a/src/content/docs/builders/tools/wallets/moon.mdx
+++ b/src/content/docs/builders/tools/wallets/moon.mdx
@@ -2,7 +2,7 @@
 title: Moon
 description: Intro to Moon
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Moon simplifies onboarding to Web3 apps by allowing users to authenticate with their existing social accounts (Google, Twitter, Instagram, etc.), making it accessible to those new to blockchain technology. Experienced users have the option to use their existing EVM wallets for authentication. Additionally, mobile users can benefit from Passkey, a highly secure, hardware-based authentication method."
