--- a/src/content/docs/builders/tools/wallets/stardust.mdx
+++ b/src/content/docs/builders/tools/wallets/stardust.mdx
@@ -2,7 +2,7 @@
 title: Stardust
 description: Intro to Stardust
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Badge } from '@astrojs/starlight/components';
 import { Aside } from '@astrojs/starlight/components';
 
