--- a/src/content/docs/builders/tools/wallets/thirdweb.mdx
+++ b/src/content/docs/builders/tools/wallets/thirdweb.mdx
@@ -3,7 +3,7 @@ title: Thirdweb
 description: Intro to 
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
