--- a/src/content/docs/builders/tools/wallets/web3auth.mdx
+++ b/src/content/docs/builders/tools/wallets/web3auth.mdx
@@ -2,7 +2,7 @@
 title: Web3Auth
 description: Intro to Web3Auth
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
