--- a/src/content/docs/builders/tools/libraries/ethersv5.mdx
+++ b/src/content/docs/builders/tools/libraries/ethersv5.mdx
@@ -3,7 +3,7 @@ title: EthersV5
 description: Intro to EthersV5
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
