--- a/src/content/docs/builders/tools/libraries/ethersv6.mdx
+++ b/src/content/docs/builders/tools/libraries/ethersv6.mdx
@@ -3,7 +3,7 @@ title: EthersV6
 description: Intro to EthersV6
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
