--- a/src/content/docs/builders/tools/libraries/web3js.mdx
+++ b/src/content/docs/builders/tools/libraries/web3js.mdx
@@ -3,7 +3,7 @@ title: Web3.js
 description: Intro to Web3.js
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
