--- a/src/content/docs/builders/tools/wallets/connectKit.mdx
+++ b/src/content/docs/builders/tools/wallets/connectKit.mdx
@@ -2,7 +2,7 @@
 title: ConnectKit
 description: Intro to ConnectKit
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
