--- a/src/content/docs/builders/tools/wallets/crossmint.mdx
+++ b/src/content/docs/builders/tools/wallets/crossmint.mdx
@@ -2,7 +2,7 @@
 title: Crossmint
 description: Intro to Wallet Crossmint
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import {Steps} from "@astrojs/starlight/components";
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
