--- a/src/content/docs/builders/tools/wallets/dynamic-xyz.mdx
+++ b/src/content/docs/builders/tools/wallets/dynamic-xyz.mdx
@@ -2,7 +2,7 @@
 title: Dynamic
 description: Intro to Dynamic
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { Aside } from '@astrojs/starlight/components';
