--- a/src/content/docs/builders/tools/wallets/ledger.mdx
+++ b/src/content/docs/builders/tools/wallets/ledger.mdx
@@ -2,7 +2,7 @@
 title: Ledger
 description: Intro to Ledger
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
