--- a/src/content/docs/builders/tools/wallets/metamask.mdx
+++ b/src/content/docs/builders/tools/wallets/metamask.mdx
@@ -2,7 +2,7 @@
 title: MetaMask
 description: Intro to MetaMask
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
