--- a/src/content/docs/builders/tools/wallets/rainbowkit.mdx
+++ b/src/content/docs/builders/tools/wallets/rainbowkit.mdx
@@ -4,7 +4,7 @@ description: Intro to RainbowKit
 ---
 
 import {Steps} from "@astrojs/starlight/components";
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 <ToolLayout
