--- a/src/content/docs/builders/tools/wallets/wallet-connect.mdx
+++ b/src/content/docs/builders/tools/wallets/wallet-connect.mdx
@@ -2,7 +2,7 @@
 title: Wallet Connect
 description: Intro to Wallet Connect
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import {Steps} from "@astrojs/starlight/components";
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
