--- a/src/content/docs/builders/developer-faq.mdx
+++ b/src/content/docs/builders/developer-faq.mdx
@@ -34,7 +34,7 @@ SKALE offers various grant programs, including:
 - **AI Grants**: Supports AI projects that combine blockchain with AI/ML models, such as AI Agents, Onchain autonomous AI, and more
 
 ### Does SKALE have a strong userbase?
-Yes. SKALE has achieved significant adoption with over 800 million on-chain transactions and 45 million unique active wallets in its first 4 years, highlighting the network’s growing popularity and real-world usage.
+Yes! SKALE has achieved significant adoption with over 800 million on-chain transactions and 45 million unique active wallets in its first 4 years, highlighting the network’s growing popularity and real-world usage.
 
 ### What does "invisible blockchain" mean?
 SKALE’s “invisible blockchain” concept refers to its ability to deliver a seamless user experience similar to traditional Web2 applications. Features such as zero gas fees, instant finality, and simplified user onboarding ensure that users interact with decentralized applications without needing to understand or pay blockchain transaction fees.
