Update Basic FAQ

--- a/src/content/docs/learn/faq.mdx
+++ b/src/content/docs/learn/faq.mdx
@@ -3,57 +3,61 @@ title: FAQ
 description: SKALE Network Frequently Asked Questions
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 ## General
 
 ### How does the SKALE Network work?
 
-The SKALE Network consists of a large pool of validator supernodes, all running concurrently and independently, validating transactions within the SKALE Chains they oversee. These supernodes coordinate with a set of smart contracts that run on the Ethereum mainnet called SKALE Manager. SKALE Manager includes SKALE Token that governs its issuance and how rewards get distributed to validators and delegators.
+The SKALE Network consists of a large pool of validator supernodes, all running concurrently and independently, validating transactions within the SKALE Chains they oversee. These supernodes coordinate with a set of smart contracts that run on the Ethereum mainnet called SKALE Manager. SKALE Manager includes the SKALE Token (SKL) that governs its issuance and how rewards get distributed to validators and delegators.
 
-Developers can attain the size chain (small, medium, and large), chain duration (180, 365, 730 days i.e. 6, 12, 24 months), and then stake SKL tokens to complete the provisioning of the chain. These tokens get staked into SKALE Manager on the Ethereum mainnet. Each month, a set portion of tokens from this developer's stake move into a bounty pool which is then used to reward the validators and delegators within the network. An inflation event occurs each month whereby new SKALE tokens are created, which gets pushed into the bounty pool for reward to validators and delegators.
+Developers can rent SKALE Chains for an infinite period of time by paying monthly rent into the network in the form of SKL tokens. These tokens are paid into the Paymaster on the SKALE Europa Hub Mainnet. 
 
-For example, suppose there are a thousand validator supernodes in the network and they all perform in accordance with the service parameters. In that case, they will each participate in the monthly proceeds from the bounty pool, which includes a portion of the SKALE Chain token stakes plus the inflation/issuance amount. Note that the distribution to the validators isn't necessarily shared equally as there is a modifier component that adjusts the payout based on the stake duration. Supernodes with tokens that are locked for twelve months, for example, will receive a greater percentage than those locked up for three or six months.
+An inflation event also occurs each month whereby new SKALE tokens are created, which gets pushed into the bounty pool for reward to validators and delegators.
 
-### How does the network work from an operational and governance perspective? x
+For example, suppose there are a thousand validator supernodes in the network and they all perform in accordance with the service parameters. In that case, they will each participate in the monthly proceeds from the bounty pool.
 
-The SKALE Network serves as a custodial execution and storage layer (Layer 2) for the Ethereum mainnet. Whereas non-custodial approaches use a system of fraud proofs to allow funds to move between chains, SKALE makes use of BLS threshold signatures, deposit boxes within the Ethereum mainnet, and other mechanisms to allow for custodial ownership and use within the network (which allows it to inherit security guarantees from the Ethereum mainnet but provide the performance inherent in a Layer 2 solution).
+### How does the network work from an operational and governance perspective?
+
+The SKALE Network serves as scaling solution decentralized EVM block space. SKALE makes use of BLS threshold signatures within the network (which allows it to inherit security guarantees from the Ethereum mainnet but provide the performance inherent in a Layer 2 solution).
 
 The stakes from the validators, developers, and the token inflation, are coordinated through SKALE Manager contracts on Ethereum mainnet and SKALE supernodes in the SKALE Network.
 
-This approach is different from other Layer 2 models that attempt to use mainnet interactions to run verification or fraud proofs. SKALE uses the Ethereum mainnet for staking and other mechanistic operations in a way that's better attuned to creating a robust and trustworthy Layer 2 network. SKALE will also support BLS Rollups for use cases that require complete reliance on Ethereum Mainnet custody.
+This approach is different from other scaling solutions that attempt to use mainnet interactions to run verification or fraud proofs. SKALE uses the Ethereum mainnet for staking and other mechanistic operations in a way that's better attuned to creating a robust and trustworthy scaling solution.
 
-### What benefits do virtualized Nodes and Supernodes containerization provide? x
+### What benefits do containerized nodes offer?
 
-Each SKALE Chain comprises a collective of randomly appointed virtualized node that run a containerized SKALE EVM-client daemon (skaled) and SKALE ABBA-based consensus algorithm. Supernodes in the SKALE Network aren't restricted to operating a single chain but instead can support multiple chains via virtualized nodes. This multiplex capability is made possible via a containerized node architecture deployed on each supernode in the network. Each supernode is virtualized and can participate as a validator via this node architecture for an independent number of SKALE Chains. Chains sizes can be small, medium, or large, with a small chain using 1/128 of a supernode's resources, a medium using 1/8 of the resources, and a large using the total amount. Medium SKALE chains are available at present but the other sizes will be made available in the near future.
+Each SKALE Chain comprises a collective of randomly appointed virtualized nodes that run a containerized SKALE EVM-client daemon (skaled) and SKALE ABBA-based consensus algorithm. Supernodes in the SKALE Network aren't restricted to operating a single chain but instead can support multiple chains via virtualized nodes. This multiplex capability is made possible via a containerized node architecture deployed on each supernode in the network. Each supernode is virtualized and can participate as a validator via this node architecture for an independent number of SKALE Chains. Chains sizes can be small, medium, or large, with a small chain using 1/128 of a supernode's resources, a medium using 1/8 of the resources, and a large using the total amount. Medium SKALE chains are available at present but the other sizes will be made available in the near future.
 
 The nodes virtualization is enabled via an innovative containerized architecture that provides industrial-grade performance and optionality for decentralized application developers – performance and flexibility that's similar to traditional centralized cloud and microservice systems. Containers are divided into several main components encapsulated via a dockerized Linux OS, allowing each supernode to be hosted in an OS-agnostic manner.
 
-### What differentiates the SKALE token from others? x
+### What differentiates the SKALE token from others?
 
 SKL is a utility token that serves as a fundamental mechanism in the security of the network. A significant amount of tokens are staked into the network by validators and delegators as provided by chain sponsors for the provision of SKALE chains. The four primary functions of the SKL token include:
 
-**Security of and staking in the network**
+- Staking and Security
 
 SKL token holders (delegators) stake their SKL tokens to validators who run supernodes that make the SKALE network function by validating blocks, executing smart contracts, and securing the network. They're rewarded with SKL tokens for their efforts.
 
-**.**Sponsorship of SKALE Chains\*\*
+- Sponsorship of SKALE Chains
 
 Developers, DAOs, and other chain sponsors provision their subscription access to SKALE Chains using SKL tokens. SKALE Chains can be provisioned in several sizes and durations with larger chains and longer durations necessitating larger deposits of SKL tokens.
 
-**Rewards for validators and delegators staking their tokens**
+- Rewards
 
 Validator and delegator rewards are accumulated on a monthly basis, based on developer stake for chains and monthly inflation of tokens.
 
-**Governance and voting**
+- Governacne
 
 SKL tokens are intended to be used for onchain voting as the means to control all economic parameters of the SKALE Network.
 
 More details about the SKALE token are here: https://skale.network/token/
 
-### What's a SKALE Chain? x
+### What is a SKALE Chain?
 
 A SKALE Chain is an Ethereum native and Ethereum-compatible chain that provides developers with increased scalability, faster throughput, and zero-gas transactions over Ethereum mainnet transactions. SKALE Chains provide EVM compute power, decentralized database storage, and other functionality to help not only power dApps but allow them to scale in a cost-efficient manner. The SKALE Network unique Proof of Stake model and operational ties with the Ethereum mainnet provides the security guarantees of Ethereum with the performance and cost efficiency of a Layer 2 solution.
 
-### What's the governing body for the SKALE Network?
+### What is the governing body for the SKALE Network?
 
 The governing body for the network is the N.O.D.E. Foundation. The Foundation believes that validators must play a primary role in policing. Given their responsibility to the network, validators are highly incentivized to act in their best interest in guarding and preserving the integrity of the network.
 
@@ -67,11 +71,9 @@ Ten percent of the total pool of SKL tokens is allocated to the Foundation and i
 
 ### When are Governance proposals scheduled?
 
-The process for governance proposals is still under development. Look for future updates in the announcement channels as well as on telegram [here](https://t.me/skalefoundation).
+Governance proposals may be issued at any time as per the initial governance proposal to setup onchain governance. You can view that on [Snapshot here](https://snapshot.org/#/s:skale.eth/proposal/0xebbc76cf6bd1afd7e1271f4339c7c04703dbe8dda78b1a731ffaf126772c0051).
 
-The Product Team is working on the plans, [see the current roadmap here](https://github.com/orgs/skalenetwork/projects/6/views/39).
-
-### Why is the SKALE token an ERC777?
+### Why does SKALE use the ERC-777 for the SKL token?
 
 The SKALE Token (SKL) is based on the ERC-777 token standard but with several key improvements. One of these improvements include the removal of ERC 777 functions which have created security issues in the past. Other improvements include the addition of functions that better support validators and delegators (those who delegate tokens to validators in return for a portion of the validator payout).
 
@@ -83,7 +85,8 @@ More details about the SKALE token are here: https://skale.space/token
 
 ### Where can I see the token schedule?
 
-The token schedule is here: https://supply.skale.network/supply/index.html :::note[Note] month 0 is Oct. 2020. :::
+The token schedule is here: https://supply.skale.network/supply/index.html
+<Aside>Month 0 is Oct. 2020.</Aside>
 
 ### What's an epoch?
 
@@ -125,4 +128,4 @@ For a detailed look at the design of the network and its security protection, pl
 
 ## Have an unanswered question?
 
-**[Head over to the SKALE Developer community!](https://discord.com/invite/gM5XBy6)**
+**[Join the SKALE Developer Discord!](https://discord.gg/skale)**
